Added several bundles (FOSUser, KnpMenu, KnpTime, KnpPaginator, KnpDoctrineBehavior). Added auto custom bundle loading from ext folder.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,12 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
+    - { resource: image.yml }
+    - { resource: fos_user.yml }
+    - { resource: knp_time.yml }
+    - { resource: knp_paginator.yml }
+    - { resource: knp_menu.yml }
+    - { resource: knp_doctrine.yml }
 
 framework:
     #esi:             ~
