--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,17 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "friendsofsymfony/jsrouting-bundle": "~1.1",
+        "gregwar/image-bundle": "dev-master",
+        "friendsofsymfony/comment-bundle": "dev-master",
+        "friendsofsymfony/elastica-bundle": "3.0.*@dev",
+        "knplabs/knp-paginator-bundle": "dev-master",
+        "knplabs/knp-time-bundle": "dev-master",
+        "knplabs/knp-menu": "2.0.*@dev",
+        "knplabs/knp-menu-bundle": "2.0.*@dev",
+        "knplabs/doctrine-behaviors": "1.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
